--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "v1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/classnames": "^2.3.1",
+    "add": "^2.0.6",
+    "carousel": "^0.0.3",
     "classnames": "^2.5.1",
+    "embla-carousel-autoplay": "^8.0.0-rc22",
+    "embla-carousel-react": "^8.0.0-rc22",
     "i": "^0.3.7",
     "install": "^0.13.0",
     "next": "^14.1.0",
     "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "shadcn-ui": "^0.8.0",
     "tailshake": "^0.0.3",
     "tailwindcss-debug-screens": "^2.2.1"
   },
