--- a/package.json
+++ b/package.json
@@ -12,22 +12,32 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "v1",
     "@material-tailwind/react": "^2.1.9",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/classnames": "^2.3.1",
     "add": "^2.0.6",
     "carousel": "^0.0.3",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "lucide-react": "^0.325.0",
     "next": "^14.1.0",
     "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-tabs": "^6.0.2",
     "shadcn-ui": "^0.8.0",
     "tailshake": "^0.0.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-debug-screens": "^2.2.1"
   },
   "devDependencies": {
