--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-navigation": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll-to-top": "^3.0.0",
     "react-tabs": "^6.0.2",
     "shadcn-ui": "^0.8.0",
     "tailshake": "^0.0.3",
