--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -49,7 +49,7 @@ on:
     branches: [ "master" ]
 
 env:
-  PROJECT_ID: "made-in-workshop" #
+  PROJECT_ID: "made-in-workshop"
   GAR_LOCATION: "africa-south1"
   SERVICE: "cool-mint"
   REGION: "africa-south1"
