--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "v1",
+    "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -36,6 +37,7 @@
     "react": "^18",
     "react-css-spinners": "^4.0.2",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-scroll-to-top": "^3.0.0",
     "react-tabs": "^6.0.2",
     "shadcn-ui": "^0.8.0",
@@ -44,7 +46,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-debug-screens": "^2.2.1",
-    "twirpscript": "^0.0.69"
+    "twirpscript": "^0.0.69",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/node": "^20",
