--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -43,10 +43,10 @@
 #   Principle of least privilege              - https://cloud.google.com/blog/products/identity-security/dont-get-pwned-practicing-the-principle-of-least-privilege
 
 name: Build and Deploy to Cloud Run
-
 on:
   push:
-    branches: [ "master" ]
+    tags:
+      - '*'
 
 env:
   PROJECT_ID: "made-in-workshop"
