--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@heroicons/react": "v1",
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/mdx": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -22,6 +26,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/classnames": "^2.3.1",
+    "@types/mdx": "^2.0.13",
     "add": "^2.0.6",
     "carousel": "^0.0.3",
     "class-variance-authority": "^0.7.0",
@@ -29,10 +34,12 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "gray-matter": "^4.0.3",
     "i": "^0.3.7",
     "install": "^0.13.0",
     "lucide-react": "^0.325.0",
     "next": "^14.1.0",
+    "next-mdx-remote": "^4.4.1",
     "next-navigation": "^1.0.6",
     "react": "^18",
     "react-css-spinners": "^4.0.2",
@@ -40,7 +47,7 @@
     "react-hook-form": "^7.51.3",
     "react-scroll-to-top": "^3.0.0",
     "react-tabs": "^6.0.2",
-    "shadcn-ui": "^0.8.0",
+    "shadcn-ui": "^0.2.3",
     "sharp": "^0.33.2",
     "tailshake": "^0.0.3",
     "tailwind-merge": "^2.2.1",
