--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
     "@types/classnames": "^2.3.1",
     "@types/mdx": "^2.0.13",
     "add": "^2.0.6",
@@ -38,6 +37,7 @@
     "i": "^0.3.7",
     "install": "^0.13.0",
     "lucide-react": "^0.325.0",
+    "markdown-to-jsx": "^7.4.7",
     "next": "^14.1.0",
     "next-mdx-remote": "^4.4.1",
     "next-navigation": "^1.0.6",
@@ -57,6 +57,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
