--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.0.0-rc22",
+    "firebase": "^10.12.0",
     "gray-matter": "^4.0.3",
     "i": "^0.3.7",
     "install": "^0.13.0",
@@ -45,11 +46,12 @@
     "react": "^18",
     "react-css-spinners": "^4.0.2",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.51.4",
     "react-scroll-to-top": "^3.0.0",
     "react-tabs": "^6.0.2",
     "shadcn-ui": "^0.2.3",
     "sharp": "^0.33.2",
+    "sonner": "^1.4.41",
     "tailshake": "^0.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -68,7 +70,7 @@
     "postcss": "^8",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
