--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "v1",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.4.2",
     "@material-tailwind/react": "^2.1.9",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/mdx": "^3.0.1",
@@ -33,7 +33,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.0.0-rc22",
-    "embla-carousel-react": "^8.0.0-rc22",
+    "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.0",
     "gray-matter": "^4.0.3",
     "i": "^0.3.7",
@@ -46,7 +46,7 @@
     "react": "^18",
     "react-css-spinners": "^4.0.2",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.4",
+    "react-hook-form": "^7.51.5",
     "react-scroll-to-top": "^3.0.0",
     "react-tabs": "^6.0.2",
     "shadcn-ui": "^0.2.3",
@@ -57,7 +57,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-debug-screens": "^2.2.1",
     "twirpscript": "^0.0.69",
-    "zod": "^3.23.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
