--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.0",
