fix: set the API url as a next public env var

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=made-in-workshop.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=329460121956
 NEXT_PUBLIC_FIREBASE_APP_ID=1:329460121956:web:8a420223fb75c6c4873a71
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=TODO
+NEXT_PUBLIC_API_URL=https://fusion-cva6vopela-bq.a.run.app
