--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gray-matter": "^4.0.3",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.325.0",
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.1.0",
@@ -71,6 +72,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
