--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/classnames": "^2.3.1",
     "@types/mdx": "^2.0.13",
     "add": "^2.0.6",
+    "add-to-calendar-button-react": "^2.6.18",
     "carousel": "^0.0.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
