--- a/package.json
+++ b/package.json
@@ -35,19 +35,20 @@
     "@types/classnames": "^2.3.1",
     "@types/mdx": "^2.0.13",
     "add": "^2.0.6",
+    "add-to-calendar-button-react": "^2.6.18",
     "carousel": "^0.0.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "dayjs": "^1.11.11",
     "embla-carousel-autoplay": "^8.0.0-rc22",
     "embla-carousel-react": "^8.1.3",
     "firebase": "^10.12.0",
     "gray-matter": "^4.0.3",
     "i": "^0.3.7",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.325.0",
     "markdown-to-jsx": "^7.4.7",
     "next": "^14.1.0",
@@ -71,6 +72,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
