--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "firebase": "^10.12.0",
     "gray-matter": "^4.0.3",
     "i": "^0.3.7",
+    "i18n-iso-countries": "^7.12.0",
     "install": "^0.13.0",
+    "libphonenumber-js": "^1.11.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.325.0",
     "markdown-to-jsx": "^7.4.7",
@@ -59,6 +61,7 @@
     "react-css-spinners": "^4.0.2",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-phone-number-input": "^3.4.6",
     "react-scroll-to-top": "^3.0.0",
     "react-tabs": "^6.0.2",
     "shadcn-ui": "^0.2.3",
